--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "gulp"
+    "build": "gulp --env=production",
+    "dev": "gulp --env=development"
   },
   "author": "cgj",
   "license": "ISC",
@@ -17,10 +18,13 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-header": "^2.0.9",
+    "gulp-if": "^3.0.0",
     "gulp-livereload": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "minimist": "^1.2.0",
+    "yargs": "^15.0.2"
   },
   "browserslist": [
     "> 1%",
