--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-filter": "^6.0.0",
     "gulp-header": "^2.0.9",
     "gulp-if": "^3.0.0",
     "gulp-livereload": "^4.0.2",
@@ -24,6 +25,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "minimist": "^1.2.0",
+    "vinyl": "^2.2.0",
+    "vinyl-paths": "^3.0.1",
     "yargs": "^15.0.2"
   },
   "browserslist": [
