--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gulp-skin",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp --env=production",
-    "dev": "gulp --env=development"
+    "dev": "gulp --env=development",
+    "release": "standard-version"
   },
   "author": "cgj",
   "license": "ISC",
@@ -32,5 +33,8 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "dependencies": {
+    "standard-version": "^7.0.1"
+  }
 }
