--- a/package.json
+++ b/package.json
@@ -7,14 +7,36 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp --env=production",
     "dev": "gulp --env=development",
-    "release": "standard-version"
-  },
-  "pre-push": {
-    "run":"release"
+    "release": "standard-version",
+    "commit": "git-cz"
   },
   "author": "cgj",
-  "license": "ISC",
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": {
+        "run": "release"
+      },
+      "commit-msg": "commitlint -e $GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog",
+      "maxHeaderWidth": 100,
+      "maxLineWidth": 100,
+      "defaultType": "",
+      "defaultScope": "",
+      "defaultSubject": "",
+      "defaultBody": "",
+      "defaultIssues": ""
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2",
     "del": "^5.1.0",
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
@@ -28,7 +50,9 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "husky": "^4.0.0-beta.5",
     "minimist": "^1.2.0",
+    "pre-commit": "^1.2.2",
     "vinyl": "^2.2.0",
     "vinyl-paths": "^3.0.1",
     "yargs": "^15.0.2"
