--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "release": "standard-version",
     "commit": "git-cz"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $GIT_PARAMS"
+    }
+  },
   "author": "cgj",
   "license": "MIT",
   "config": {
@@ -42,7 +47,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "husky": "^4.0.0-beta.5",
+    "husky": "^3.1.0",
     "minimist": "^1.2.0",
     "pre-commit": "^1.2.2",
     "vinyl": "^2.2.0",
