--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "gulp --env=production",
     "dev": "gulp --env=development",
     "commit": "git add . && git-cz",
-    "push:version": "npm-run-all commit release",
+    "push": "npm-run-all commit release",
     "release": "standard-version && git push"
   },
   "husky": {
