--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
     "gulp-filter": "^6.0.0",
     "gulp-header": "^2.0.9",
     "gulp-if": "^3.0.0",
@@ -48,10 +49,12 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-webserver": "^0.9.1",
     "husky": "^3.1.0",
     "minimist": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
+    "standard-version": "^7.0.1",
     "vinyl": "^2.2.0",
     "vinyl-paths": "^3.0.1",
     "yargs": "^15.0.2"
@@ -59,9 +62,5 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ],
-  "dependencies": {
-    "pre-push": "^0.1.1",
-    "standard-version": "^7.0.1"
-  }
+  ]
 }
