--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "browser-sync": "^2.26.7",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "del": "^5.1.0",
@@ -45,10 +46,12 @@
     "gulp-filter": "^6.0.0",
     "gulp-header": "^2.0.9",
     "gulp-if": "^3.0.0",
+    "gulp-inject": "^5.0.4",
     "gulp-livereload": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-webserver": "^0.9.1",
     "husky": "^3.1.0",
     "minimist": "^1.2.0",
